static/styles/portico/portico.css
/* ... */
@media (max-width: 475px) {
    .footer {
        width: auto;

        section {
            margin: 0 3px;
            width: calc(50% - 8px);
        }
    }
}

@media (max-width: 400px) {
    .footer {
        section {
            width: calc(100% - 40px);
            max-width: none;
            text-align: center;
        }
    }
}

.emoji {
    height: 25px;
    width: 25px;
    vertical-align: text-bottom;
}

.m-v-20 {
    margin: 20px 0;
}

label.label-title {
    font-weight: 600;
}

.inline-block {
    display: inline-block;
    vertical-align: top;
}

.button-new {
    padding: 8px 15px;
    margin: 0;
    min-width: 130px;

    font-weight: 400;

    background-color: hsl(207, 55%, 53%);
    color: hsl(0, 0%, 100%);
    outline: none;
    border: none;
    border-radius: 2px;

    cursor: pointer;
    transition: all 0.3s ease;
}

/* -- button states -- */
.button-new:hover {
    filter: brightness(1.1);
}

.button-new:active {
    filter: brightness(0.9);
}

.button-new.sea-green {
    background-color: hsl(177, 70%, 46%);
    color: hsl(0, 0%, 100%);
}

.float-left {
    float: left;
}

.float-right {
    float: right;
}

#find_account .form-control {
    height: 30px;
}

#find_account .btn {
    height: 40px;
    border-radius: 5px;
}

.documentation-footer {
    font-size: 0.85rem;
    opacity: 0.8;
}

#devtools-wrapper {
    text-align: right;
}

#devtools-registration {
    float: left;
    form {
        display: inline;
    }
}

#devtools-page {
    max-width: 800px;
    margin: 0 auto;
}

.portico-page.error {
    padding-bottom: 0;
}

.portico-page.error .portico-page-container {
    padding: 0;
}

#third-party-apps {
    margin-top: 20px;
    padding-right: 10px;
}

.api-argument {
    .api-argument-name {
        font-family: monospace;

        .api-argument-hover-link i.fa {
            opacity: 0;
            font-size: 0.9em;
        }

        &:hover .api-argument-hover-link i.fa {
            opacity: 1;
            color: hsl(0, 0%, 0%);
            cursor: pointer;
        }
    }

    .api-argument-example-label {
        font-style: italic;
    }

    .api-argument-required {
        text-transform: uppercase;
        font-weight: 600;
        font-size: 12px;
        color: hsl(14, 75%, 60%);
    }

    .api-argument-optional {
        text-transform: uppercase;
        font-weight: 400;
        font-size: 12px;
        color: hsl(0, 0%, 47%);
    }

    .api-argument-deprecated {
        text-transform: uppercase;
        font-weight: 600;
        font-size: 12px;
        color: hsl(0, 50%, 60%);
    }
}

.desktop-redirect-box {
    text-align: center;

    .copy-token-info {
        font-weight: normal;
    }

    #desktop-data {
        padding: 13px 12px 12px 12px;
        font-family: monospace;
    }
}

.desktop-redirect-links {
    margin-top: 20px;
    text-decoration: underline;
    color: hsl(0, 0%, 50%);
}

.desktop-redirect-image {
    margin-bottom: 20px;
}

.unsupported_browser_page {
    padding-bottom: 80px;
}

#navbar-custom-message {
    font-size: 1rem;
    background: linear-gradient(145deg, hsl(191, 56%, 55%), hsl(169, 65%, 42%));
    color: hsl(0, 0%, 100%);
    font-weight: 600;
    text-align: center;
    position: relative;
    top: 0;
    padding: 10px;
    border-bottom: 1px solid hsl(177, 52%, 55%);
    z-index: 5;

    a {
        color: hsl(0, 0%, 100%);
        text-decoration: underline;
    }
}

